@@ -6,6 +6,7 @@ Version 1.23  2009-10-31
  * client/fdfs_test.c: print the source ip address decoded from the remote 
    filename
  * client add function fdfs_get_file_info
+ * php extension add functions: fastdfs_http_gen_token and fastdfs_get_file_info
 
 Version 1.22  2009-10-12
  * bug fixed: common/shared_func.c allow_hosts array maybe overflow in some case
